<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:orientation="horizontal" 
	    android:layout_weight="1" >
		<Button
		    android:id="@+id/b_bt_saveContent"
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:text="@string/bt_editcontent_save" />
		<Button
		    android:id="@+id/b_bt_saveContent_go"
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:text="@string/bt_editcontent_goon" />
	</LinearLayout>
	
	
	
	<EditText
        android:hint="@string/ev_editcontent_hint_title"
        android:id="@+id/b_et_editTitle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10" >

        <requestFocus />
    </EditText>
	<EditText
	    android:hint="@string/ev_editcontent_hint_content"
	    android:id="@+id/b_et_editCont"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:ems="10"
	    android:layout_weight="8"
	    android:inputType="textMultiLine" 
	    android:gravity="top"
	    />
</LinearLayout>