<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<Button
	    android:id="@+id/bt_saveContent"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:text="@string/bt_editcontent_save" />
    <EditText
        android:hint="@string/ev_editcontent_hint_title"
        android:id="@+id/et_editTitle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10" >

        <requestFocus />
    </EditText>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:orientation="horizontal" 
	    android:layout_weight="1" >
        
	    <EditText
	        android:id="@+id/et_editDate"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1" 
	        android:cursorVisible="false"
	        android:ems="10" />
	    <EditText
	        android:id="@+id/et_editTime"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1" 
	        android:cursorVisible="false"
	        android:ems="10" />

	</LinearLayout>

	<EditText
	    android:hint="@string/ev_editcontent_hint_content"
	    android:id="@+id/et_editCont"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:ems="10"
	    android:layout_weight="5"
	    android:inputType="textMultiLine" 
	    android:gravity="top"
	    />
</LinearLayout>